fix(qe): Fix serialPort dispose error (#2370)
* fix(qe): Fix serialPort dispose error

* fix(qe): Fix serialPort dispose error

* fix(qe): Fix serialPort dispose error